--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Teste de Programação Elo7</title>
+		<title>Landing page</title>
 		<link rel="stylesheet" href="assets/css/style.css">
 		<!--[if lt IE 9]>
     		<script>
@@ -17,45 +17,45 @@
 	<body id="topo">
 		<div class="container">
 			<header>
-				<img src="assets/images/foto-header.png" alt="Faça parte do time Elo7">
-				<h1 class="header-title">Trabalhe no Elo7</h1>
+				<img src="assets/images/image-header.jpg" alt="Image header">
+				<h1 class="header-title">Title header</h1>
 				<h2 class="header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vitae nulla sed odio convallis molestie. Morbi lacinia facilisis enim a ornare. Integer lobortis nulla vel mauris sodales, ut tempor neque efficitur. Lorem ipsum dolor sit amet. </h2>
-				<a href="#jobs" class="alink">Vagas em aberto </a>
+				<a href="#jobs" class="alink">Jobs Openings</a>
 			</header>
 		
 			<section class="section-team">
 				<div class="rowContainer">
 					<div class="col-ld-6 col-sd-12 col-md-12">
 						<a href="#">
-							<img src="assets/images/placeholder-video.png" alt="Vídeo do SEO">
+							<img src="assets/images/placeholder-video.jpg" alt="img vídeo">
 						</a>
 					</div>
 					<div class="col-ld-6 col-sd-12 col-md-12">
-						<h1 class="seo-description-title">Palavra do CEO</h1>
-						<h2 class="seo-description-subTitle">Carlos Curioni</h2>
+						<h1 class="seo-description-title">Section title</h1>
+						<h2 class="seo-description-subTitle">Subtitle</h2>
 						<p class="seo-description-text">Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo.</p>
 					</div>
 				</div>		
-					<h2 class="team-title">Conheça nosso time fora de série</h2>
+					<h2 class="team-title">ours team</h2>
 					<ul>
 						<li class="col-ld-3 col-sd-12">
 							<a href="#">
-								<img src="assets/images/camila.png" alt="Camila - time fora de série">
+								<img src="assets/images/ours-team.jpg" alt="Person1 name">
 							</a>
 						</li>
 						<li class="col-ld-3 col-sd-12">
 							<a href="#">
-								<img src="assets/images/guto.png" alt="Guto - time fora de série">
+								<img src="assets/images/ours-team.jpg" alt="Person2 name">
 							</a>
 						</li>
 						<li class="col-ld-3 col-sd-12">
 							<a href="#">
-								<img src="assets/images/david.png" alt="David - time fora de série">
+								<img src="assets/images/ours-team.jpg" alt="Person3 name">
 							</a>
 						</li>
 						<li class="col-ld-3 col-sd-12">
 							<a href="#">
-								<img src="assets/images/beatriz.png" alt="Beatriz - time fora de série">
+								<img src="assets/images/ours-team.jpg" alt="Person4 name">
 							</a>
 						</li>
 					</ul>
@@ -65,38 +65,37 @@
 				<div class="rowContainer">
 					<div class="col-ld-4 col-sd-12 quality-item">
 						<img src="assets/images/qualidade.png" alt="Qualidade de vida">
-						<h2 class="quality-title">Qualidade de vida</h2>
+						<h2 class="quality-title">Life quality</h2>
 						<p class="quality-text">Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis.</p>
 					</div>
 					<div class="col-ld-4 col-sd-12 quality-item">
 						<img src="assets/images/descontracao.png" alt="Ambiente descontraído">
-						<h2 class="quality-title">Ambiente descontraído</h2>
+						<h2 class="quality-title">Great environment</h2>
 						<p class="quality-text">Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio. Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis.</p>
 					</div>
 					<div class="col-ld-4 col-sd-12 quality-item">
 						<img src="assets/images/atividades.png" alt="Atividades extras">
-						<h2 class="quality-title">Atividades extras</h2>
+						<h2 class="quality-title">Extras activities</h2>
 						<p class="quality-text">Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis.</p>
 					</div>
 				</div>
-				<a href="#" class="alink">Saiba mais </a>
 			</section>
 
 			<section class="section-jobs" id="jobs">
-				<img src="assets/images/foto-bottom.png" alt="Elo7">
-				<h1 class="section-jobs-title">Vagas em aberto</h1>
-				<h2 class="jobs-title">Desenvolvimento</h2>
+				<img src="assets/images/image-bottom.jpg" alt="image bottom">
+				<h1 class="section-jobs-title">Jobs Openings</h1>
+				<h2 class="jobs-title">Development</h2>
 				<dl class="table-jobs">
-					<dt class="col-ld-8 col-sd-12"><a href="#">Desenvolvedor Mobile Senior (Android e iOS)</a></dt>
-					<dd class="col-ld-4 col-sd-12">Vila Olímpia - São Paulo, Brasil</dd>
-					<dt class="col-ld-8 col-sd-12"><a href="#">Desenvolvedor Java Senior</a></dt>
-					<dd class="col-ld-4 col-sd-12">Vila Olímpia - São Paulo, Brasil</dd>
-					<dt class="col-ld-8 col-sd-12"><a href="#">Desenvolvedor Front-End</a></dt>
-					<dd class="col-ld-4 col-sd-12">Vila Olímpia - São Paulo, Brasil</dd>
+					<dt class="col-ld-8 col-sd-12"><a href="#">Dev. Mobile (Android e iOS)</a></dt>
+					<dd class="col-ld-4 col-sd-12">Location - City, Country</dd>
+					<dt class="col-ld-8 col-sd-12"><a href="#">Dev. Java </a></dt>
+					<dd class="col-ld-4 col-sd-12">Location - City, Country</dd>
+					<dt class="col-ld-8 col-sd-12"><a href="#">Dev. Front-End</a></dt>
+					<dd class="col-ld-4 col-sd-12">Location - City, Country</dd>
 				</dl>
 			</section>
 		</div>
-		<a href="#topo" class="goTop">Voltar ao topo</a>
+		<a href="#topo" class="goTop">Top</a>
 		<!-- scripts -->
 		<script src="assets/js/libs.js"></script>
 		<script src="assets/js/main.js"></script>
